연혁 & 조직과 사람들 수정

--- a/data/activity.yml
+++ b/data/activity.yml
@@ -23,243 +23,354 @@ ko:
         - title: 2022
         - date: 2022.01.05.
           body:
-          - 일본군‘위안부’문제해결을 위한 피해자지원단체 네트워크 기자회견
-          - 수요시위 30주년 기념 1525차 수요시위
-        - date: 2022.08.10.
+          - 수요시위 30주년 기념, 일본군성노예제문제해결을 위한 정기수요시위 개최
+        - date: 2022.03.08.
           body:
-          - 제10차 세계일본군‘위안부’기림일 세계연대집회 수요시위, 사전행진
-        - date: 2022.08.14.
+          - "<나비기금> 10주년 기념 라운드테이블, “나비기금 10년, 세계 전시성폭 력 피해자의 희망으로 다시 한 번 날다!” 개최"
+        - date: 2022.08.09.
           body:
-          - 제10차 세계일본군‘위안부’기림일 나비문화제      
+          - 610여개 시민단체들과 「한일역사정의평화행동」 결성
+        - date: 2022.11.10.
+          body:
+          - 일본군’위안부‘피해에 대한 부정과 피해자 명예훼손 처벌을 위한 「일제 하 일본군위안부 피해자에 대한 보호·지원 및 기념사업 등에 관한 법률」 개정 발의              
         - title: 2021
-        - date: 2021.05.18.
+        - date: 2021.05.24.
           body:
-          - 사단법인 아디와 아시아 분쟁지역 젠더폭력(GBV) 피해생존자 보호·지원, 팔레스타인 여성 트라우마 힐링센터 3년간 지원 시작
+          - <나비기금> 팔레스타인 정기지원 시작
         - date: 2021.07.14.
           body:
-          - "일본군성노예제 문제해결을 위한 1500차 정기 수요시위(주관 : 1500 공동주관인)"
-          - 수요시위 아카이브, 1500차 수요시위 기념 리뉴얼 오픈    
-        - date: 2021.08.11.
+          - "제1500차 일본군성노예제문제해결을 위한 정기수요시위 세계동시연대집 회로 개최" 
+        - date: 2021.08.
           body:
-          - 제9차 세계일본군’위안부’기림일 세계연대집회
-        - date: 2021.08.14.
-          body:
-          - 제9차 세계일본군‘위안부’기림일 나비문화제
+          - 김학순 공개증언 30주년 기념, 국제심포지엄, 전시회 등 개최
         - title: 2020
-        - date: 2020.08.12.
+        - date: 2020.06.24.
           body:
-          - 제8차 세계일본군‘위안부’ 기림일 세계연대집회
-        - date: 2020.08.14.
+          - 정의기억연대 성찰과 비전위원회 구성(2021.02. 종료)
+        - date: 2020.09.28.
           body:
-          - 제8차 세계일본군‘위안부’ 기림일 나비문화제  
-        - date: 2020.09.19.
+          - 독일 베를린, 평화의소녀상 건립 지원 
+        - date: 2020.11.
           body:
-          - 국제심포지엄 <끌려간 사람들, 돌아오지 못한 사람들, 아직도 끝나지 않은 전쟁> 개최
-        - date: 2020.10.08.
-          body:
-          - 한국정신대문제대책협의회 창설 30주년 기념 특별전시 <길 위에서의 30년, 결국은 희망이더라> 
-        - date: 2020.11.14.
-          body:
-          - 정대협/정의연 30주년 기념 심포지엄
+          - "정대협/정의연 30주년 기념, 국제심포지엄 “정대협 운동 30주년의 역사와 의미 포스트피해자시대의 외침, 우리가 새롭게 만들어 갈 30년” 등 개최"
         - title: 2019
-        - date: 2019.03.13.
-          body:
-          - 제22회 지학순정의평화상 수상
-        - date: 2019.08.08.
-          body:
-          - 영화 김복동 개봉
         - date: 2019.08.14.
           body:
-          - 제7차 세계일본군‘위안부’기림일 기념 세계연대행동 및 1400차 일본군성노예제문제해결을 위한 정기수요시위 개최
+          - 제7차 세계일본군‘위안부’기림일 기념 세계연대행동 및 1400차 일본군성 노예제문제해결을 위한 정기수요시위 개최
         - title: 2018
         - date: 2018.03.08.-09.
           body:
-          - 제15차 일본군‘위안부’문제해결을 위한 아시아연대회의 ‘실현되지 않은 정의, 일본군성노예제 문제의 해결을 위하여’ 서울 개최 
+          - "제15차 일본군‘위안부’문제해결을 위한 아시아연대회의 ‘실현되지 않 은 정의, 일본군성노예제 문제의 해결을 위하여’ 개최/개최지: 서울"
         - date: 2018.07.11.
           body:
-          - 한국정신대문제대책협의회와 일본군성노예제문제해결을 위한 정의기억재단 통합하여 <일본군성노예제 문제 해결을 위한 정의기억연대> 공식 출범
-        - date: 2018.08.14.
-          body:
-          - 제6차 일본군‘위안부’ 기림일 맞이 국제심포지엄, 제1회 김복동평화상 시상식, 나비문화제 진행
-        - date: 2018.11.16.
-          body:
-          - 정대협 창립 28주년 기념 ‘북측 생존자들의 기억과 증언, 그리고 문제해결을 위한 남북연대’ 심포지엄 진행
+          - 정대협과 정의기억재단 통합, <일본군성노예제 문제 해결을 위한 정의기 억연대>(이하 정의기억연대) 공식 출범
         - title: 2017
-        - date: 2017.08.09.
+        - date: 2017.05.16.
           body:
-          - 제5차 세계일본군‘위안부’기림일 맞이 공동행동
+          - 정의기억재단, <길원옥 여성평화상> 제정
+        - date: 2017.06.09.
+          body:
+          - 정의기억재단, 한일청년교류를 위한 희망씨앗기금 설립
+        - date: 2017.08.15.
+          body:
+          - 정의기억재단, <100만 시민모금> 시작
+        - date: 2017.09.
+          body:
+          - <나비기금> 우간다 지원 시작(2021. 정기지원 종료)
         - date: 2017.09.13.
           body:
-          - 제1300차 일본군성노예제문제해결을 위한 정기수요시위 개최
+          - 제1300차 일본군성노예제문제해결을 위한 정기수요시위 세계동시연대집회로 개최
         - date: 2017.11.25.
           body:
-          - 일본군성노예제문제해결을 위한 정의기억재단, 239명 한국의 피해자 모두에게 100만 시민의 이름으로 여성인권상 수여
+          - 정의기억재단, 239명 한국의 피해자 모두에게 100만 시민의 이름으로 여성인권상 수여(화해치유재단 위로금 수령 거부 피해자들에게 <100만 시민모금>으로 모금된 상금 1억원(유족 2000만원) 개별 지급
+        - date: 2017.11.25.
+          body:
+          - 정의기억재단, <김복동평화상> 제정                                      
         - title: 2016
-        - date: 2016.05.18.-20
+        - date: 2016.05.18.-20.
           body:
-          - 제14차 일본군‘위안부’문제해결을 위한 아시아연대회의, 서울 개최
-        - date: 2016.06.09
+          - "제14차 일본군‘위안부’문제해결을 위한 아시아연대회의 개최/개최지: 서울"
+        - date: 2016.06.09.
           body:
-          - 2015한일합의 무효화와 일본군성노예제 문제의 정의로운 해결을 위해 <일본군성노예제 문제해결을 위한 정의기억재단> 설립
-        - date: 2016.08.10.
+          - ‘2015 한일합의’ 무효화와 일본군성노예제 문제의 정의로운 해결을 위해 <일본군성노예제 문제해결을 위한 정의기억재단>(이하 정의기억재단) 설립
+        - date: 2016.12.28.
           body:
-          - 제4차 일본군‘위안부’ 기림일 맞이 나비문화제 진행
+          -  일본군‘위안부’피해자들과 유족, 한국법원에 일본정부상대 손해배상청구소송 제기(2차 소송)
         - title: 2015
         - date: 2015.05.24.
           body:
-          - 제13차 일본군‘위안부’ 문제해결을 위한 아시아연대회의 서울에서 개최. 일본정부에 대한 제언’과 결의문 채택. 한일정부에 전달
-        - date: 2015.08.14.
-          body:
-          - 제3차 세계일본군‘위안부’ 기림일 맞이 공동행동 진행
+          - "제13차 일본군‘위안부’ 문제해결을 위한 아시아연대회의 개최/개최지: 서울 (일본정부에 대한 제언’과 결의문 채택)"
         - date: 2015.10.14.
           body:
-          - 제1200차 일본군성노예제문제해결을 위한 정기 수요시위 개최
+          - 제1200차 일본군성노예제문제해결을 위한 정기수요시위 세계동시연대집 회로 개최
+        - date: 2015.12.28.
+          body:
+          - 한일 외교부 장관 기자회견 형식으로 ‘위안부 문제 합의’ 기습 발표(일 명, 2015 한일합의)
         - title: 2014
-        - date: 2014.05.30.-06.03.
+        - date: 2014.03.14.
           body:
-          - 제12차 일본군‘위안부’문제해결을 위한 아시아연대회의, 도쿄 개최
-        - date: 2014.08.14.
+          - 『한국정신대문제대책협의회 20년사』 출간
+        - date: 2014.05.30-06.03.
           body:
-          - 제2차 세계일본군‘위안부’ 기림일 맞이 촛불문화제 진행
+          - "제12차 일본군‘위안부’문제해결을 위한 아시아연대회의 개최/개최지: 일본 도쿄"
         - title: 2013
-        - date: 2013.03.08.
+        - date: 2013.04.23.
           body:
-          - 베트남한국군성폭력 피해자들에게 사죄의 메시지 발표, 한국정부에게 사죄와 배상 요구 성명발표. 피해자에게 매월 생활비 전달 및 한국군 2,3세에게 자활지원 시작.
+          - 나비기금 베트남 한국군성폭력 피해자에게 정기지원 시작
+        - date: 2013.04.27.
+          body:
+          - 일본군‘위안부’문제 해결을 위한 1억인 서명운동 시작
+        - date: 2013.07.30.
+          body:
+          - 미국 캘리포니아 글렌데일시 첫 해외 평화의소녀상 건립 지원(2022.12.기준, 18기)
         - date: 2013.08.14.
           body:
           - 제1회 세계 일본군‘위안부’ 기림일 기념 세계연대행동 및 제1087차 일본군‘위안부’ 문제해결을 위한 정기수요시위 개최
         - date: 2013.11.13.
           body:
-          - 제1100차 일본군‘위안부’문제해결을 위한 정기수요시위 개최
+          - 제1100차 일본군‘위안부’문제해결을 위한 정기수요시위 세계동시연대집회로 개최         
         - title: 2012
         - date: 2012.03.08.
           body:
-          - 전시하 성폭력 피해 여성을 지원하기 위한 <나비기금> 발족
+          - 3.8여성의날을 맞아 전시 성폭력 피해여성 지원을 위한 <나비기금> 발족
         - date: 2012.05.05.
           body:
           - <전쟁과여성인권박물관> 개관
-        - date: 2012.12.10.-11.
+        - date: 2012.07.01.
           body:
-          - 제11차 일본군‘위안부’문제해결을 위한 아시아연대회의 대만 개최
-          - 8월 14일을 세계일본군‘위안부’메모리얼데이(기림일)로 채택
+          - 정대협 ‘제9회 서울특별시 여성상’ 대상 수상
+        - date: 2012.09.
+          body:
+          - <나비기금> 콩고 정기지원 시작
+        - date: 2012.11.05.
+          body:
+          - 마포에 피해생존자 쉼터 <평화의 우리집> 개소(202.06. 사업종료)
+        - date: 2012.12.10-11.
+          body:
+          - "제11차 일본군‘위안부’문제해결을 위한 아시아연대회의 개최/개최지:대만(8월 14일을 세계일본군‘위안부’메모리얼데이-기림일로 채택)"                            
         - title: 2011
         - date: 2011.08.12.-15.
           body:
-          - 제10차 일본군‘위안부’ 문제 해결을 위한 아시아연대회의, 서울 개최
+          - "제10차 일본군‘위안부’문제해결을 위한 아시아연대회의 개최/개최지: 서울"
+        - date: 2011.08.30.
+          body:
+          - 헌법재판소, 일본군‘위안부’ 문제의 해결을 위해 한국 정부가 노력하지 않는 것이 피해자의 기본권을 침해한다며 위헌을 선고. 이에 따라 9월, 외 교통상부 내 ‘한일청구권협정 대책 TF’ 설치
         - date: 2011.12.14.
           body:
-          - 제1000차 일본군‘위안부’ 문제해결을 위한 정기 수요시위 개최, 일본대사관 앞에서 평화비 제막식 진행
+          - 제1000차 일본군‘위안부’ 문제해결을 위한 정기수요시위 세계동시연대집 회로 개최. 일본대사관 앞 평화비(일명, 평화의소녀상) 설립
         - title: 2010
         - date: 2010.01.13.
           body:
-          - 제900차 일본군‘위안부’문제해결을 위한 수요시위 개최
-        - date: 2010.11.18
+          - 제900차 일본군‘위안부’문제해결을 위한 정기수요시위 세계동시연대집회 로 개최
+        - date: 2010.11.18.
           body:
-          - 정대협 창립20주년 기념 국제심포지엄 “2010년, 일본군‘위안부’ 문제를 말한다” 개최
+          - "정대협 창립 20주년 기념사업: 국제심포지엄 <2010년, 일본군위안부 문 제를 말한다> 개최 등"
+        - title: 2009
+        - date: 2009.03.08.
+          body:
+          - 전쟁과여성인권박물관 건립을 위한 ‘희망의 터 다지기’ 개최
         - title: 2008
-        - date: 2008.02.13.
-          body:
-          - 제800차 일본군‘위안부’ 문제 해결을 위한 정기수요시위 개최
         - date: 2008.03.08.
           body:
-          - "한국정신대문제대책협의회 수요시위가 3.8 세계여성의 날 100주년 “올해의 여성운동상” 수상"
-        - date: 2008.11.23.-25.
+          - "한국여성단체연합 주최 3.8 세계여성의 날 100주년 행사에서 수요시위, “올해의 여성운동상” 수상"
+        - date: 2008.11.23-25.
           body:
-          - 제9차 일본군‘위안부’ 문제 해결을 위한 아시아연대회의, 도쿄 개최
+          - "제9차 일본군‘위안부’ 문제 해결을 위한 아시아연대회의/개최지: 일본 도쿄"
         - title: 2007
-        - date: 2007.05.19.-21.
+        - date: 2007.05.19-21.
           body:
-          - 서울에서 제8차 일본군‘위안부’문제해결을 위한 아시아연대회의 개최
+          - "제8차 일본군‘위안부’문제해결을 위한 아시아연대회의 개최/개최지: 서울"
+        - date: 2007.07.30.
+          body:
+          - "미국 하원, 일본군위안부 결의안(H.Res.121) 통과"
+        - date: 2007.02.13.
+          body:
+          - "제800차 일본군‘위안부’ 문제 해결을 위한 정기수요시위 세계동시 연대 집회로 개최"          
         - title: 2006
         - date: 2006.03.15.
           body:
-          - 제700차 정기수요시위 ‘여성폭력 중단, 일본군위안부 피해자에게 정의를!’ 세계동시연대집회(8개국, 14개 도시) 개최
-        - title: 2005
-        - date: 2005.01.05.
+          - 제700차 일본군‘위안부’문제해결을 위한 정기수요시위 ‘여성폭력 중단, 일본군위안부 피해자에게 정의를!’ 세계동시연대집회로 개최
+        - date: 2006.07.05.
           body:
-          - 해방 60주년 글로벌캠페인 <일본군‘위안부’에게 정의를> 발대식
+          - 일본군‘위안부’피해 생존자 109명이 문제해결을 위한 한국정부의 부작위 가 피해자들의 기본권을 침해했다는 취지의 헌법소원심판 청구(2011.8.30. 헌재는 한국정부가 일본군‘위안부’문제해결을 위해 노력하지 않는 것이 피 해자의 기본권을 침해하는 위헌 행위라고 선고)
+        - date: 2006.12.14.
+          body:
+          - 정대협운동사 사진집 『희망으로 쓰는 역사』 발간       
+        - title: 2005
         - date: 2005.02.12.-14.
           body:
-          - "일본 도쿄에서 제7차 아시아연대회의 ‘전후 60주년의 위안부 문제해결운동: 가해국 일본의 책임을 묻다’ 개최"
+          - "제7차 일본군‘위안부’문제해결을 위한 아시아연대회의 ‘전후 60주년 의 위안부 문제해결운동: 가해국 일본의 책임을 묻다’ 개최/개최지: 일본 도쿄"
+        - date: 2005.05.27-29.
+          body:
+          - "제6회 일본군‘위안부’ 할머니와 함께하는 인권캠프 개최"
         - title: 2004
         - date: 2004.03.17.
           body:
           - 제600차 일본군'위안부'문제해결을 위한 정기수요시위 개최
-        - date: 2004.05.20.
+        - date: 2004.05.18.
           body:
-          - 일본의 과거청산을 요구하는 국제연대협의회 서울대회 개최
+          - 증언6집 『역사를 만드는 이야기 일본군‘위안부’여성들의 경험과 기억』 발간
+        - date: 2004.10.07-09.
+          body:
+          - 제5회 일본군‘위안부’ 할머니와 함께하는 인권캠프 개최
+        - date: 2004.12.16.
+          body:
+          - 전쟁과여성인권박물관 건립위원회 발족                
         - title: 2003
-        - date: "2003.04.23.-24."
+        - date: 2003.04.23-24.
           body:
-          - 서울에서 제6차 아시아연대회의 ‘국제기구 권고와 2000년 법정 판결 실현을 위하여!’ 개최
+          - "제6차 일본군‘위안부’문제해결을 위한 아시아연대회의 ‘국제기구 권 고와 2000년 법정 판결 실현을 위하여!’ 개최/개최지: 서울"
+        - date: 2003.10.09-12.
+          body:
+          - 제4회 일본군‘위안부’ 할머니와 함께하는 인권캠프 개최
         - date: 2003.12.10.
           body:
-          - 한국정신대문제대책협의회 쉼터 <평화의 우리집> 개소
+          - 서대문에 피해생존자 쉼터 <우리집> 개소(2012. 마포 이전)
         - title: 2002
         - date: 2002.03.13.
           body:
-          - 제500차 일본군‘위안부’문제해결을 위한 정기 수요시위 개최
+          - 제500차 일본군‘위안부’문제해결을 위한 정기수요시위 개최
+        - date: 2002.09.26-28.
+          body:
+          - 제3회 일본군‘위안부’ 할머니와 함께하는 인권캠프 개최
+        - title: 2001
+        - date: 2001.02.20.
+          body:
+          - "증언4집 『강제로 끌려간 조선인 군위안부들 4: 기억으로 다시 쓰는 역 사』 발간"
+        - date: 2001.07.21.
+          body:
+          - 정대협 병설 전쟁과여성인권센터 발족            
+        - date: 2001.08.30-09.02.
+          body:
+          - 제2회 일본군‘위안부’ 할머니와 함께하는 인권캠프 개최
+        - date: 2001.12.20.
+          body:
+          - "증언5집 『강제로 끌려간 조선인 군위안부들 5』 발간"
         - title: 2000
         - date: 2000.03.01.
           body:
-          - 제400차 일본군‘위안부’문제해결을 위한 수요시위 개최
-        - date: "2000.12.07.-12."
+          - 제400차 일본군‘위안부’문제해결을 위한 정기수요시위 개최
+        - date: 2000.08.31-09.02.
           body:
-          - 일본군성노예전범 여성국제법정 개최, 일왕 히로히토 유죄판결
+          - 제1회 일본군‘위안부’ 할머니와 함께하는 인권캠프 개최
+        - date: 2000.12.07-12.
+          body:
+          - 일본군성노예전범 여성국제법정 개최(일본 도쿄, 일왕 히로히토 유죄판결)
+        - title: 1999
+        - date: 1999.10.25.
+          body:
+          - 증언3집 『강제로 끌려간 조선인 군위안부들 3』 발간     
         - title: 1998
         - date: 1998.02.18.
           body:
-          - 제300차 일본군‘위안부’ 문제 해결을 위한 정기수요시위 개최
-        - date: "1998.04.15.-17."
+          - 제300차 일본군‘위안부’문제해결을 위한 정기수요시위 개최
+        - date: 1998.04.15-17.
           body:
-          - 제5차 아시아연대회의 서울 개최
+          - "제5차 일본군‘위안부’문제해결을 위한 아시아연대회의 ‘이제, 일본 정 부의 배상으로 해결을!’ 개최/개최지: 서울(2000년 일본군성노예전범 여성 국제법정을 개최하기로 결정)"
+        - date: 1998.08.01.
+          body:
+          - 유엔인권소위원회, 게이 맥두걸의 「전쟁 중 조직적 강간, 성노예제 및 노예제 유사관행」 보고서 채택(부속 문서, 「제2차 대전 중 설치된 위안소에 관한 일본 정부의 법적 책임의 분석」)
+        - title: 1997
+        - date: 1997.04.30.
+          body:
+          -  증언2집 『강제로 끌려간 조선인 군위안부들 2』 발간
+        - date: 1997.07.11.
+          body:
+          -  정대협 외무부 산하 사단법인 등록
+        - date: 1997.08.11.
+          body:
+          -  ‘강제연행당한 일본군위안부 할머니 지키기 시민연대’ 2차 모금 시작(1998.05. 피해자들에게 모금 지원금 전달)
+        - date: 1997.12.16.
+          body:
+          -  일본군‘위안부’ 국내 최초 증언자 김학순 할머니 별세         
         - title: 1996
         - date: 1996.01.24.
           body:
-          -  제200차 일본군‘위안부’ 문제해결을 위한 정기수요시위 진행.     
-        - date: 1996.03.27.-30.
+          - 제200차 일본군‘위안부’ 문제해결을 위한 정기수요시위 개최     
+        - date: 1996.03.04.
           body:
-          - "제4차 일본군‘위안부’문제해결을 위한 아시아연대회의 필리핀 마닐라에서 개최 “국민기금이 왜 해결책이 아닌가?”"
-        - date: 1996.01.24.
+          - ILO, 최초로 보고서에 일본군’위안부’문제 개제(강제노동금지규약(ILO Convention 제29조) 위반)
+        - date: 1996.03.27-30.
           body:
-          - 일본군‘위안부’ 국내 최초 증언자 김학순 할머니 별세
+          - "제4차 일본군‘위안부’ 문제해결을 위한 아시아연대회의 ‘국민기금이 왜 해결책이 아닌가?’ 개최/개최지: 필리핀 마닐라"
+        - date: 1996.04.19.
+          body:
+          - 유엔인권위원회, 라디카 쿠마라스와미의 「일본군 성노예제에 관한 보고서」 채택
+        - date: 1996.10.18.
+          body:
+          - 일본 정부의 ‘국민기금’에 대응하기 위해 정대협 등 39개 시민단체, ‘일본군'위안부'문제의 올바른 해결을 위한 시민연대’(이후 ‘강제연행당한 일본 군'위안부'문제해결을 위한 시민연대’로 개칭) 발족, 국민모금 및 캠페인 시 작(1997.5. 당시 신고, 확인된 피해자 154명에게 모금 지원금 전달)   
         - title: 1995  
-        - date: "1995.02.27.-03.01."
+        - date: 1995.02.27-03.01.
           body:
-          - 제3차 아시아연대회의 ‘전후 50년 위안부 문제는 왜 해결되지 않았는가.’ 개최.
-        - date: 1995.04.22.
+          - "제3차 일본군‘위안부’문제해결을 위한 아시아연대회의 ‘전후 50년 위안부 문제는 왜 해결되지 않았는가’ 개최/개최지: 서울(민간위로기금 거 부 결의)"
+        - date: 1995.03.10.
           body:
-          - 기록영화제작소 보임이 제작한 영화 <낮은 목소리> 시사회 진행 및 극장상영 시작
-        - date: "1995.09.04.-15."
+          - 증언집 『중국으로 끌려간 조선인 군위안부들』 발간
+        - date: 1995.09.04-15.
           body:
-          - 베이징 세계여성대회 참석. 최종문서 행동강령에 진상 규명과 범죄자 소추 및 피해자에게 보상이 명기된 147e와 f가 채택
-        - title: 1993       
-        - date: 1993.10.23.
+          - "베이징 세계여성대회 참석(최종 행동강령에 진상 규명과 범죄자 소추 및 피해자 보상 명기된 147[e]와 [f] 채택)"
+        - date: 1995.09.22.
           body:
-          - 제2차 ‘강제종군위안부 문제해결을 위한 아시아연대회의’ 개최 
-        - date: 1993.10.23.          
+          - 정대협 서울변호사회 주최 제3회 시민인권상 수상
+        - title: 1994
+        - date: 1994.02.07.
           body:
-          - 제100차 일본군'위안부'문제해결을 위한 정기수요시위 개최
+          - 일본 도쿄 지방검찰에 일본군‘위안부’문제 책임자 처벌을 위한 고소‧고발 장 제출(수령거부)
+        - date: 1994.08.
+          body:
+          - 일본군‘위안부’문제 PCA(국제상설중재재판소) 제소 결정 및 준비위원회 출 범 (일본 정부가 응하지 않아 무산)
+        - date: 1994.11.22.
+          body:
+          - ICJ(국제법률가위원회), 일본군'위안부'문제에 대한 보고서, 「위안부-끝 나지 않은 시련(Comfort Women - an Unfinished Ordeal)」 발표      
+        - title: 1993
+        - date: 1993.02.25.
+          body:
+          - 증언1집 『강제로 끌려간 조선인 군위안부들 1』 발간
+        - date: 1993.06.10.-22.          
+          body:
+          - 비엔나 세계인권대회 참석 (비엔나 선언 및 행동계획에 여성인권 명 기. 이후 세계인권선언문에 무력분쟁하의 여성인권침해 사례의 하나로 ‘성 노예제’ 포함.) 북한 장수월, 남한 김복동 만남
+        - date: 1993.06.11.
+          body:
+          - 한국 정부, 「일제하 일본군위안부에 대한 생활안정지원법」 제정
+        - date: 1993.08.04.
+          body:
+          - <일본정부의 강제종군’위안부’문제 제2차 조사발표(일명, 고노담화)에 대한 우리의 입장> 성명 발표
+        - date: 1993.10.21-25.
+          body:
+          - "제2차 ‘강제종군위안부 문제해결을 위한 아시아연대회의’ 개최/개최지: 일본 도쿄(‘일본군위안부’ 용어 사용 결의)"
+        - date: 1993.12.23.
+          body:
+          - 제100차 일본군'위안부'문제해결을 위한 정기수요시위 개최                            
         - title: 1992
         - date: 1992.01.08.
           body:
-          - 제1차 일본군‘위안부’문제해결을 위한 정기 수요시위
-        - date: "1992.8.10.-11."
+          - 제1차 일본군‘위안부’문제해결을 위한 정기수요시위 시작
+        - date: 1992.8.10-11.
           body:
-          - 제1차 ‘정신대문제 아시아연대회의’ 개최         
-        - date: "1992.08.08.-26."
+          - "제1차 ‘정신대문제 아시아연대회의’ 개최/개최지: 서울"        
+        - date: "1992.08.08-26."
           body:
-          - 정대협 국제협력위원회 처음으로 유엔인권소위원회에 참가하여 일본군‘위안부’ 문제 유엔에 제기
+          - 정대협 국제협력위원회, 유엔인권소위원회에 참가해 일본군‘위안부’문제 제기 (이후 매년 유엔 등 국제기구에 공식 문제 제기 지속)
+        - date: 1992.12.01.
+          body:
+          - ‘정신대할머니 생활기금모금 국민운동본부’ 발족(1993.7. 당시 신고 피해자 62명에게 모금 지원금 전달 후 해산)
+        - date: 1992.12.25. 
+          body:
+          - 일본군‘위안부’와 ‘여자 근로정신대’ 피해자 10명, 야마구치 지방재판소 시모노세키지부에 제소(일명 관부재판 시작. 1998년 1심, 원고 일부 승소)      
+        - title: 1991
         - date: 1991.08.14.
           body:
-          - 김학순 할머니, 일본군‘위안부’ 피해자임을 공개적으로 밝히는 기자회견 개최
+          - 일본군‘위안부’피해자 김학순, 최초 공개 증언
         - date: 1991.09.18.
           body:
-          - 정대협 ‘정신대 신고전화’ 개통          
+          - ‘정신대 신고전화’ 개설
+        - date: 1991.12.06.
+          body:
+          - 김학순 등 일본군‘위안부’ 피해생존자 일본 정부 제소(일명, ‘아시아태평양전쟁 한국인 희생자 보상 청구사건’)               
         - title: 1990
         - date: 1990.11.16.
           body:
-          - 37개 여성단체가 모여 ‘한국정신대문제대책협의회 결성                                                                                                                                                                                                                
+          - 국내 37개 여성단체가 모여 ‘한국정신대문제대책협의회’(이하 정대협) 결성                                                                                                                                                                                                               
   wednesday_demonstration:
     title: "수요시위"
     slug: wednesday_demonstration
