정의기억연대란 수정

--- a/data/introduction.yml
+++ b/data/introduction.yml
@@ -3,7 +3,7 @@ ko:
     title: 정의기억연대소개
     인사말:
       title: 인사말
-      message: “전쟁과여성인권박물관에 오신 것을 환영합니다.”
+      message: 일본군성노예제 문제해결을 위한 정의기억연대는
       body:
       - 전쟁과여성인권박물관은 일본군’위안부’피해생존자들이 겪었던 역사를 기억하고 교육하며, 일본군 성노예제 문제 해결을 위해 활동하는 공간입니다. 지금도 일어나고 있는 전시성폭력 문제에 관심을 가지고 전쟁과 여성폭력 없는 세상을 위해 연대하고 행동하는 박물관입니다.
       - 안전하고 평화로운 세상에서 아이들이 자라길 바랐던 일본군’위안부’ 피해생존자들의 오랜 염원은 국내외 시민들의 공감을 불러일으켜 모금 활동으로 이어졌습니다. 기나긴 여정을 지나 마침내 2012년 5월 5일 어린이날, 전쟁과여성인권박물관은 미래세대와 시민들에게 특별한 선물이 되어 문을 열었습니다.
