--- a/data/activity.yml
+++ b/data/activity.yml
@@ -1,4 +1,72 @@
 ko:
+  정의기억연대소개:
+    title: 정의기억연대소개
+    인사말:
+      title: 일본군성노예제 문제해결을 위한
+      message: 정의기억연대는
+      body:
+      - 1990년 11월 16일 국내 37개 여성단체의 결의로 발족한 한국정신대문제대책협의회의 정신과 활동을 계승하고, 2016년 6월 9일 ‘2015한일합의’무효화를 위해 100만 시민의 참여로 설립된 일본군성노예제 문제해결을 위한 정의기억재단의 설립 취지와 활동을 이어받아 2018년 7월 11일 통합, 출범하였습니다.
+      - 1991년 8월 14일, 김학순 할머니의 용기 있는 증언으로부터 세상에 알려진 일본군성노예제 문제의 올바른 해결을 위해 할머니들께서 끊임없이 외쳤던 메시지를 이어받아 피해자들의 명 예와 인권을 회복하고, 평화로운 세상을 열기 위해 활동을 하고 있습니다. 정의기억연대는 여 성, 인권, 평화의 관점에서 세계 시민과 함께 일본군성노예제 문제와 분쟁하 여성인권 침해 및 성착취 문제를 해결하고 기억하는 데 앞장서고 있습니다.
+      - 진실과 정의를 위해 연대하며 기록하고 교육하는 정의기억연대의 활동에 많은 관심과 후원을 부탁드립니다.
+    사이트소개:
+      목록:
+      - title : 일본군성노예제란?
+        url: /comfort-women/meanings/
+      - title : 오시는 길
+        url: /about/location/
+      - title : 수요시위
+        url: /activity/wednesday-demonstration/
+      - title : 후원하기
+        url: /donate-and-support/guide/
+      - title : 전쟁과여성인권박물관
+        url: https://womenandwarmuseum.net/       
+      - title : 전쟁과여성인권아카이브
+        url: https://archives.womenandwar.net     
+    비전미션:
+      title: "일본군성노예제 문제해결을 위한 정의기억연대는"
+      body: 일본군성노예제 문제 범죄인정, 공식사죄와 법적 배상, 진실규명, 책임자처벌 등을 통한 정의 로운 해결을 이룸으로써 피해자들의 명예와 인권회복에 기여하고, 역사교육 및 추모사업 등을 통해 미래세대로 하여금 일본군성노예제 문제를 올바르게 기억하게 하고 나아가 전시 성폭력 재발방지를 위해 노력할 것입니다.
+      비전:
+        title: 비전
+        message: 
+        - 앞장서고 연대한다
+        - 기록하고 기억하고 교육한다
+        - 소통하고 튼튼하게 한다
+      사명:
+        title: 사명
+        message: 
+        - 여성인권평화의 관점에서
+        - 세계시민과 함께 일본군성노예제 문제와
+        - 분쟁 하 여성인권 침해 및 성착취 문제를
+        - 해결하고 기억하는데 앞장선다.
+      미션:
+        title: 미션
+        mission_01:
+          title: <목표 1> 진실·정의를 위해 앞장서고 연대한다
+          body:
+          - 1-1. 일본군성노예제 문제의 진실과 정의로운 해결을 위한 활동 지원, 국내외 단체 지원과 공동행동 강화
+          - 1-2. 수요시위를 비롯해 다양한 온·오프라인 시민참여의 장 마련
+          - 1-3. 일본군 ‘위안부’ 기림일을 분쟁하 여성인권 침해와 성착취 근절을 위한 국제행동의 날로 발전
+          - 1-4. 국내외 평화비를 여성·인권·평화 네트워크의 상징으로 자리매김
+          - 1-5. 나비기금을 통한 분쟁지역 성폭력 피해자 지원 확대
+          - 1-6. 국제활동가 육성과 유엔 등 국제기구에서 대응, 국제INGO와 협력 강화
+        mission_02:
+          title: <목표 2> 여성·인권·평화를 기록하고 기억하고 교육한다
+          body:
+          - 2-1. 여성인권평화센터 설립과 디지털 아카이브 구축
+          - 2-2. 기억과 계승을 위한 장학과 연구지원 사업 추진
+          - 2-3. 주제 사안 대응과 콘텐츠 개발에 유기적인 자료와 연구 
+          - 2-4. 연구에 기반한 사업체계 구축, 번역 및 발간 사업 확대 
+          - 2-5. 교육과 홍보 컨텐츠 개발 및 프로그램 강화
+          - 2-6. 라키비움을 지향하는 전쟁과여성인권박물관
+        mission_03:
+          title: <목표 3> 투명하게 소통하고 튼튼하게 한다
+          body:
+          - 3-1. 이사회의 권한과 책임성 강화, 집행기구의 실행력 강화
+          - 3-2. 투명성과 효율성 제고를 위한 회계관리 통합시스템 구축
+          - 3-3. 후원자 확장 및 참여구조 개선과 시민 소통 강화
+          - 3-4. 전문위원회 및 실무 자문역 강화를 통한 사업 기획·이행·평가 시스템 체계화 
+          - 3-5. 팀제 운영 및 업무간 연계 강화, 상근활동가의 지속가능한 활동 여건 개선
+          - 3-6. 통합 공간 마련 등 혁신 지속        
   definition:
     title: "일본군 성노예제란 ?"
     황금주:
