테스트서버 경로를 ww.durumi.io로 수정합니다.

--- a/config/_default/config.yml
+++ b/config/_default/config.yml
@@ -1,5 +1,5 @@
 title: (재)일본군성노예제문제해결을위한정의기억연대
-baseURL: https://stage.womenandwar.net
+baseURL: https://ww.durumi.io
 
 defaultContentLanguage: ko
 hasCJKLanguage: true
